Closed Bug 791091 Opened 13 years ago Closed 13 years ago

Fix some build warnings

Categories

(Core :: XPConnect, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: drexler, Assigned: drexler)

Details

Attachments

(1 file)

Attached patch warnings_fixSplinter Review
Removes an extra ';' in XPCComponents.cpp and an unused variable 'numFrames' in XPCStack.cpp
Attachment #660977 - Flags: review?(jorendorff)
Attachment #660977 - Flags: review?(jorendorff) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: