Bug 791091 - Fix build warnings in XPConnect. r=jorendorff