js/xpconnect/src/XPCStack.cpp
@@ -93,7 +93,6 @@ nsresult
 XPCJSStackFrame::CreateStack(JSContext* cx, XPCJSStackFrame** stack)
 {
     static const unsigned MAX_FRAMES = 100;
-    unsigned numFrames = 0;
 
     nsRefPtr<XPCJSStackFrame> first = new XPCJSStackFrame();
     nsRefPtr<XPCJSStackFrame> self = first;
